--- a/views/admin/partials/sidebar.ejs
+++ b/views/admin/partials/sidebar.ejs
@@ -27,10 +27,12 @@
 
             
         </ul>
-        {{!-- <ul class="nav nav-bottom">
-            <li class="nav-item">
-                <a href="" class="nav-link">fuck 1</a>
-            </li>   
-        </ul> --}}
+        <%# 
+            <ul class="nav nav-bottom">
+                <li class="nav-item">
+                    <a href="" class="nav-link">fuck 1</a>
+                </li>   
+            </ul>        
+        %>
     </div>
 </nav>
