--- a/views/layouts/main.ejs
+++ b/views/layouts/main.ejs
@@ -4,17 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{{ title }}</title>
+    <title><%= title %></title>
     <link rel="stylesheet" href="/css/app.min.css">
 
 </head>
 <body>
-    {{> header }}
-    
-    {{{ body }}}
-    
-    {{> footer }}
 
+    <%- include('../partials/header') %>
+    
+    <%- body %>
+
+    <%- include('../partials/footer') %>
+    
     <script src="/js/app.min.js"></script>
 </body>
 </html>
