--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -10,11 +10,11 @@
             <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="/">Home</a>
             </li>
-            {{!-- user dropdown --}}
-            {{#if user}}
+            <%# user dropdown %>
+            <% if (user) { %>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                        {{user.name}}
+                        <%= user.name %>
                     </a>
                     <ul class="dropdown-menu dropdown-menu-end ">
                         <li><a class="dropdown-item" href="#">Profile</a></li>
@@ -23,10 +23,10 @@
                         <li><a class="dropdown-item" href="/logout">Logout</a></li>
                     </ul>
                 </li>
-            {{else}}
+            <% } else { %>             
                 <li class="nav-item"><a class="nav-link" href="/login">Login</a></li>
                 <li class="nav-item"><a class="nav-link" href="/signup">Signup</a></li>
-            {{/if}}
+            <% } %>
         </ul>
 
     </div>
