--- a/views/admin/users/create.ejs
+++ b/views/admin/users/create.ejs
@@ -10,7 +10,7 @@
         <div class="col-lg-8 col-md-10">
             <form action="/dashboard/users" method="POST">
                 
-                {{> error-messages}}
+                <%- include('../../partials/error-messages') %>
 
                 <div class="mb-3">
                     <label for="" class="form-label">Avatar</label>
@@ -21,14 +21,14 @@
                     <div class="col-md-6">
                         <div class="mb-3">
                             <label for="" class="form-label">First Name</label>
-                            <input type="text" name="first_name" class="form-control" value="{{old.first_name}}" placeholder="First Name">
+                            <input type="text" name="first_name" class="form-control" value="<%= old.first_name %>" placeholder="First Name">
                         </div>
 
                     </div>
                     <div class="col-md-6">
                         <div class="mb-3">
                             <label for="" class="form-label">Last Name</label>
-                            <input type="text" name="last_name" class="form-control" value="{{ old.last_name }}" placeholder="Last Name">
+                            <input type="text" name="last_name" class="form-control" value="<%= old.last_name %>" placeholder="Last Name">
                         </div>
                     </div>
                 </div>
@@ -37,13 +37,13 @@
                     <div class="col-md-6">
                         <div class="mb-3">
                             <label for="" class="form-label">Email</label>
-                            <input type="email" name="email" class="form-control" value="{{ old.email }}" placeholder="Email">
+                            <input type="email" name="email" class="form-control" value="<%= old.email %>" placeholder="Email">
                         </div>
                     </div>
                     <div class="col-md-6">
                         <div class="mb-3">
                             <label for="" class="form-label">Phone</label>
-                            <input type="text" name="phone" class="form-control" value="{{ old.phone }}" placeholder="Phone">
+                            <input type="text" name="phone" class="form-control" value="<%= old.phone %>" placeholder="Phone">
                         </div>
                     </div>
                 </div>
@@ -65,16 +65,19 @@
                 </div>
 
 
-                {{!--  bootstrap checkbox for roles --}}
+                <%# bootstrap checkbox for roles %>
                 <div class="mb-3 mt-2">
-                {{#each roles}}
+                <% roles.forEach(role => { %>
                     <div class="form-check">
-                        <input class="form-check-input" type="checkbox" name="roles" {{arrayIncludes ../old.roles this 'checked' ''}} value="{{this}}" id="{{this}}-checkbox">
-                        <label class="form-check-label" for="{{this}}-checkbox">
-                            {{ucwords this }}
-                        </label>                    
+                        <input class="form-check-input" type="checkbox" name="roles" 
+                            <%= old.roles ? (old.roles.includes(role) ? 'checked' : '') : '' %> 
+                            value="<%= role %>" 
+                            id="<%= role %>-checkbox">
+                        <label class="form-check-label" for="<%= role %>-checkbox">
+                            <%= role.substring(0,1).toUpperCase() +  role.substring(1) %>
+                        </label>
                     </div>
-                {{/each}}
+                <% }) %>
                 </div>
 
                 <button class="btn btn-primary rounded-5">Create</button>
