--- a/views/layouts/admin.ejs
+++ b/views/layouts/admin.ejs
@@ -4,19 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{{ title }}</title>
+    <title><%= title %></title>
     <link rel="stylesheet" href="/css/admin.min.css">
 
 </head>
 <body class="admin-template-body">
 
     <div class="template-wrapper">
-        {{> admin/sidebar}}
+        <%- include('../admin/partials/sidebar') %>
 
         <div class="app-content">
-            {{> admin/header }}
+            <%- include('../admin/partials/header') %>
             <main class="main-content">
-                {{{ body }}}
+                <%- body %>
             </main>
         </div>
     </div>
