added .env.example file

--- a/views/error/default.ejs
+++ b/views/error/default.ejs
@@ -11,7 +11,7 @@
 <body class="default-error-page bg-dark">
     
     <div class="display-6 text-white-50">
-        {{ message }}
+        <%= message %>
     </div>
     
     <script src="/js/app.min.js"></script>
