--- a/views/home.ejs
+++ b/views/home.ejs
@@ -38,7 +38,7 @@
                                     <p><%= post.body.substring(0,200) %></p>
                                 <% } %>
                                 <% if(index == 4){ %>
-                                    <h3 class="card-title"><%= post.title %></h3>
+                                    <h3 class="card-title"><%= post.title.substring(0,50) %></h3>
                                     <p><%= post.body.substring(0,300) %></p>
                                 <% } %>
                                 <a href="" class="btn btn-outline-light">Read More</a>
@@ -64,7 +64,7 @@
 
         <% posts.forEach(post => { %>
             <div class="col-4 mb-2">
-                <div class="card">
+                <a href="/posts/<%= post._id %>" class="card text-body text-decoration-none">
                     <img src="<%= post.image %>" alt="" class="card-img-top">
                     <div class="card-body">
                         <h5 class="card-title"><%= post.title.substring(0,50) %></h5>
@@ -78,7 +78,7 @@
                             <small class="text-muted"><%= moment(post.createdAt).format('MMM Do Y') %></small>
                         </div>
                     </div>
-                </div>
+                </a>
             </div>
         <% }) %>
     </section>
@@ -88,13 +88,24 @@
             <a href="/posts" class="btn btn-dark mt-3 d-block">View All</a>
         </div>
     </div>
-    
-
 
 </div>
 
 
 <script>
+    let cookies = new Map()
+
+    if(document.cookie.indexOf('user_cookie') != -1){
+        let cookieArray = document.cookie.split(";")
+        cookieArray.forEach(c =>{ 
+            let [key, value] = c.split("=");  
+            cookies.set(key.trim(), value) }
+        )
+    }
+
+    console.log(cookies.get('user_cookie'))
+    
+
     let featured = document.querySelectorAll('.posts-grid--masonry .post-card');
 
     featured.forEach(elm => {
