--- a/views/posts/index.ejs
+++ b/views/posts/index.ejs
@@ -11,7 +11,7 @@
 
         <% posts.forEach(post => { %>
             <div class="col-4 mb-2">
-                <div class="card">
+                <a href="/posts/<%= post._id %>" class="card text-decoration-none text-body">
                     <img src="<%= post.image %>" alt="" class="card-img-top">
                     <div class="card-body">
                         <h5 class="card-title"><%= post.title.substring(0,50) %></h5>
@@ -25,7 +25,7 @@
                             <small class="text-muted"><%= moment(post.createdAt).format('MMM Do Y') %></small>
                         </div>
                     </div>
-                </div>
+                </a>
             </div>
         <% }) %>
     </section>
