--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -2,10 +2,10 @@
     <div class="container">
         <a class="navbar-brand" href="/">Node Blog</a>
 
-        <form class="d-flex ms-auto" role="search">
+        <!-- <form class="d-flex ms-auto" role="search">
             <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
             <button class="btn btn-outline-success" type="submit">Search</button>
-        </form>
+        </form> -->
         <ul class="nav">
             <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="/">Home</a>
