--- a/views/admin/partials/sidebar.ejs
+++ b/views/admin/partials/sidebar.ejs
@@ -2,7 +2,7 @@
     <div class="sidebar-inner">
         <ul class="nav nav-top">
             <li class="nav-item">
-                <a href="" class="nav-link">
+                <a href="/dashboard" class="nav-link">
                     <i class="fa-solid fa-magnifying-glass-dollar"></i>
                 </a>
             </li>   
@@ -13,7 +13,7 @@
                 <a href="/dashboard/posts" class="nav-link"><i class="fa-solid fa-book"></i></a>
             </li>   
             <li class="nav-item">
-                <a href="" class="nav-link"><i class="fa-solid fa-comment"></i></a>
+                <a href="#" class="nav-link"><i class="fa-solid fa-comment"></i></a>
             </li>   
             <li class="nav-item">
                 <a href="" class="nav-link"><i class="fa-solid fa-heart"></i></a>
