--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -1,11 +1,17 @@
 
 
-<div class="container py-5">
+<div class="container pb-5">
 
     <%- include('../partials/error-messages.ejs') %>
 
     <div class="row justify-content-center">
         <div class="col-lg-5 col-md-6">
+            <div class="alert alert-warning my-3 mb-4">
+                <p>To <strong>Sign In</strong> please use <strong>Email: iamqamarali1@gmail.com</strong>
+                     and <strong>Password: password</strong>
+                </p>
+            </div>
+
             <h2 class="text-center mb-4">Welcome Back</h2>
             <p class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse eum nesciunt minima quos dignissimos repellendus.</p>
             <div class="card p-3">
