--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,12 +1,15 @@
 <nav class="navbar">
     <div class="container">
-        <a class="navbar-brand" href="/">Node Blog</a>
+        <a class="navbar-brand" href="/">PostsEverywhere</a>
 
         <!-- <form class="d-flex ms-auto" role="search">
             <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
             <button class="btn btn-outline-success" type="submit">Search</button>
         </form> -->
         <ul class="nav">
+            <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="/dashboard">Dashboard</a>
+            </li>
             <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="/">Home</a>
             </li>
