--- a/views/admin/dashboard.ejs
+++ b/views/admin/dashboard.ejs
@@ -5,7 +5,7 @@
 
 
     <div class="row stats my-5">
-        <div class="col-3">
+        <div class="col-md-3">
             <div class="card bg-light-pink py-4">
                 <div class="card-body text-center">
                     <p class="mb-0 display-5">213.2k</p>
@@ -14,7 +14,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-3">
+        <div class="col-md-3">
             <div class="card bg-light-green  py-4">
                 <div class="card-body text-center">
                     <p class="mb-0 display-5">213.2k</p>
@@ -23,7 +23,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-3">
+        <div class="col-md-3">
             <div class="card bg-light-blue  py-4">
                 <div class="card-body text-center">
                     <p class="mb-0 display-5">213.2k</p>
@@ -32,7 +32,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-3">
+        <div class="col-md-3">
             <div class="card bg-light-gray  py-4">
                 <div class="card-body text-center">
                     <p class="mb-0 display-5">213.2k</p>
