--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,6 +1,6 @@
 <nav class="navbar">
     <div class="container">
-        <a class="navbar-brand" href="/">PostsEverywhere</a>
+        <a class="navbar-brand" href="/">Node Blog</a>
 
         <!-- <form class="d-flex ms-auto" role="search">
             <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
